--- a/src/test/java/.travis.yml
+++ b/src/test/java/.travis.yml
@@ -4,6 +4,6 @@ cache:
   directories: $HOME/.m2
 notifications:
   email:
-    recipients: yourgithubaccountemail@example.com
+    recipients: s.dowell@kainos.com
     on_failure: always
     on_success: never
